<?xml version="1.0"?>
<package format="2">
  <name>AR_week8_test</name>
  <version>1.0.0</version>
  <description>The AR_week8_test package</description>

  <maintainer email="v.gromoglasov@stu14.qmul.ac.uk">Volodymyr Gromoglasov</maintainer>

  <license>BSD</license>

  <author email="v.gromoglasov@stu14.qmul.ac.uk">Volodymyr Gromoglasov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <export>

  </export>
</package>
